<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ranking"
        android:title="@string/ranking"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/players"
        android:title="@string/players"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/info"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nogames"
        android:title="@string/no_games"
        app:showAsAction="ifRoom" />
    <!--android:icon="@drawable/ic_menu_4"-->
</menu>
