<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_list"
    android:name="com.tile.yvesv.nativeappsiproject.PlayerListFragment"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"

    tools:context=".gui.activities.RankingActivity"
    tools:listitem="@layout/player_rank_item" />

    <!--app:layoutManager="LinearLayoutManager"-->