<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Darts</string>
    <string name="description_format">%1$s\n\n%2$s</string>
    <string name="minus_one">- 1</string>
    <string name="plus_one">+ 1</string>
    <string name="less_than_zero_error">Score can not be lower than 0!</string>
    <string name="ranking">Ranking</string>
    <string name="players">Players</string>
    <string name="info">Info</string>

    <string name="title_activity_splash">Darts: keeping up with the scores</string>
    <string name="native_apps_i_android">Native Apps I: Android</string>
    <string name="using_kotlin">using Kotlin</string>
    <string name="info_quote">\"The most important step a man can take. It\'s not the first one, is it? It\'s the next one. Always the next step.\"</string>
    <string name="info_name">Yves Vanduynslager</string>
    <string name="hogent_tile3a_2018_2019">HoGent | TILE3A | 2018 - 2019</string>
    <string name="title_activity_players">PlayersActivity</string>
    <string name="ranking_activity_title">Ranking</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="quote">"The most important step a man can take. It\'s not the first one, is it? It\'s the next one. Always the next step"</string>
    <string name="yves_vanduynslager">Yves Vanduynslager</string>
    <string name="e_mail">E-mail</string>
    <string name="class_year">Native Apps I -- HoGent TILE/3A -- 2018-2019</string>
    <string name="no_games">No games to play?</string>
    <string name="no_games_to_play">No games to play? Press the button!</string>
    <string name="give_me_something_else">Give me something else to do</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="delete">Delete</string>
</resources>
